opa/demo/images/constrainttemplates.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8simagevalidate
spec:
  crd:
    spec:
      names:
        kind: K8sImageValidate
      validation:
        openAPIV3Schema:
          properties:
            registry:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8simagevalidate

        violation[{"msg": msg}] {                                                                                                   
          image := input.review.object.spec.containers[_].image                 
          not contains(image, input.parameters.registry )                                    
          msg := sprintf("Images from %v registry are only allowed to run - Got %v", [input.parameters.registry, image])
        }
